# azure-01

./: .env.example  .replit  README.md  app.py  app.yaml  db_schema.json  pyproject.toml  replit.md  requirements.txt
.streamlit/: config.toml
attached_assets/: Pasted--Build-a-Unified-User-Friendly-Azure-Platform-Support-WebApp-Replit-Databricks-Streamli-1759862320201_1759862320204.txt  Pasted--runtime-Python-3-11-13-Node-js-v22-16-0-env-variables-DATABRICKS-APP-NAME--1759886845832_1759886845833.txt  Pasted-2025-10-08-01-03-36-SYSTEM-cce6587-ERROR-01f0a3e296631535909b5dfdacce6587-Error-deploying-a-1759885480996_1759885480997.txt  Pasted-2025-10-08-01-12-18-SYSTEM-c2265d4-ERROR-01f0a3e3c9211955a6ed4cd1ec2265d4-Error-deploying-a-1759886066715_1759886066716.txt  Pasted-2025-10-08-01-23-24-SYSTEM-4883b8e-INFO-01f0a3e558ae1719afb1d67424883b8e-Deployment-success-1759886810206_1759886810207.txt
core/: azure_auth.py  azure_client.py  azure_client_factory.py  azure_real_client.py  config_loader.py  db_manager.py  db_migration.py  env_utils.py  export_utils.py  installer.py  login_page.py  ui_helpers.py  user_auth.py
pages/: 1_Resource_Explorer.py  2_Cost_Dashboard.py  3_Incident_Center.py  4_Performance_Monitor.py  5_Tools.py  6_Admin_Settings.py
